# example-workspace

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  run-docker.sh
bevy-app/: Cargo.toml  README.md
bevy-app/crates/bevy-rust-gpu/: Cargo.toml
bevy-app/crates/bevy-rust-gpu/src/: entry_point_export.rs  lib.rs  prelude.rs  rust_gpu_entry_point.rs  rust_gpu_material.rs  rust_gpu_missing_entry_points.rs  rust_gpu_shader_meta.rs  shader_meta.rs
bevy-app/crates/rust-gpu-sdf/: Cargo.toml
bevy-app/crates/viewer/: Cargo.toml
bevy-app/crates/viewer/assets/rust-gpu/: shader.rust-gpu.json
bevy-app/crates/viewer/examples/: compute.rs  compute_new.rs  sdf-2d-material.rs  sdf-3d-material.rs  sdf-material.rs  simple-material.rs  standard-material.rs
bevy-app/crates/viewer/src/: main.rs  rust_gpu_entry_point.rs  rust_gpu_material.rs  rust_gpu_shaders.rs  shader_material.rs
crates/bevy-pbr-rust/: Cargo.toml
crates/bevy-pbr-rust/src/: clustered_forward.rs  lib.rs  prelude.rs  shadows.rs  skinning.rs
crates/bevy-pbr-rust/src/mesh/: base_material_normal_map.rs  entry_points.rs  mesh_bindings.rs  mesh_functions.rs  mesh_types.rs  mod.rs  vertex_normal.rs  vertex_uv.rs
crates/bevy-pbr-rust/src/mesh_view/: bindings.rs  cluster_light_index_lists.rs  cluster_offsets_and_counts.rs  directional_light.rs  globals.rs  lights.rs  mesh_view_bindings.rs  mesh_view_types.rs  mod.rs  point_lights.rs
crates/bevy-pbr-rust/src/pbr/: entry_points.rs  lighting.rs  mod.rs  pbr_functions.rs  standard_material.rs  tonemapper.rs
crates/shader/: Cargo.toml
crates/shader-builder/: Cargo.toml  build.rs
crates/shader-glam/: Cargo.toml
crates/shader-glam/src/: lib.rs
crates/shader-util/: Cargo.toml
crates/shader-util/src/: lib.rs  prelude.rs  reflect.rs  saturate.rs  smooth_step.rs
crates/shader/src/: bevy_core_pipeline.rs  lib.rs  reflect.rs  saturate.rs
crates/shader/src/bevy_pbr/: clustered_forward.rs  mesh.rs  mesh_functions.rs  mesh_types.rs  mesh_view_bindings.rs  mesh_view_types.rs  mod.rs  pbr.rs  pbr_bindings.rs  pbr_functions.rs  pbr_lighting.rs  pbr_types.rs  shadows.rs
crates/shader/src/bevy_pbr_rust/: mod.rs  tonemapping_shared.rs
crates/shader/src/bevy_pbr_rust/mesh/: mod.rs
crates/shader/src/bevy_pbr_rust/mesh_view/: mesh_view_bindings.rs  mesh_view_types.rs  mod.rs
crates/shader/src/bevy_pbr_rust/pbr/: mod.rs  pbr_functions.rs  pbr_lighting.rs
crates/shader/src/shader_util/: mod.rs  reflect.rs
crates/viewer/: Cargo.toml
crates/viewer/src/: main.rs  shader_material.rs
rust-gpu/: Cargo.toml  README.md  entrypoint.sh  rust-toolchain.toml
rust-gpu/.cargo/: config.toml
rust-gpu/crates/bevy-pbr-rust/: Cargo.toml  entry_points.json
rust-gpu/crates/bevy-pbr-rust/src/: clustered_forward.rs  lib.rs  shadows.rs
rust-gpu/crates/bevy-pbr-rust/src/mesh/: bindings.rs  entry_points.rs  skinned_mesh.rs  skinning.rs  vertex_color.rs  vertex_position.rs  vertex_tangent.rs
rust-gpu/crates/bevy-pbr-rust/src/mesh_view/: cluster_light_index_lists.rs  cluster_offsets_and_counts.rs  directional_light.rs  lights.rs  mod.rs  point_light.rs  view.rs
rust-gpu/crates/bevy-pbr-rust/src/pbr/: bindings.rs  dither.rs  entry_points.rs  lighting.rs  mod.rs
rust-gpu/crates/bevy-rust-gpu-macros/: Cargo.toml
rust-gpu/crates/bevy-rust-gpu-macros/src/: lib.rs
rust-gpu/crates/bevy-rust-gpu-macros/src/permutate/: keywords.rs  mod.rs  parameter_conditional.rs  parameters.rs  permutate_attribute.rs  permutations.rs
rust-gpu/crates/permutate-macro/: Cargo.toml
rust-gpu/crates/permutate-macro/src/permutate/: attributes.rs  keywords.rs  permutations.rs
rust-gpu/crates/rust-gpu-builder/: Cargo.toml  README.md  build.rs  rust-toolchain.toml
rust-gpu/crates/rust-gpu-builder/src/: main.rs
rust-gpu/crates/shader/: Cargo.toml
rust-gpu/crates/shader-builder/: Cargo.toml  entrypoints.json
rust-gpu/crates/shader-builder/src/: main.rs
rust-gpu/crates/shader/lib/perlin-rs-main/: .gitignore  Cargo.toml  LICENSE  README.md
rust-gpu/crates/shader/lib/perlin-rs-main/examples/: noise.rs  pink_noise.rs
rust-gpu/crates/shader/lib/perlin-rs-main/src/: lib.rs  perlin_2d.rs  perlin_3d.rs
rust-gpu/crates/shader/src/: lib.rs  lib.rs.mrp
shared/rust-gpu-util/: Cargo.toml
shared/rust-gpu-util/src/: lib.rs  natural_log.rs  prelude.rs
shared/shader-util/src/: prelude.rs  saturate.rs  smooth_step.rs
