[workspace]
resolver = "2"
members = [
    "crates/shader-glam",
    "crates/shader-util",
    "crates/bevy-pbr-rust",
    "crates/shader",
    "crates/shader-builder",
    "crates/viewer",
]
default-members = ["crates/viewer"]

# Fast-compile config for crates in this workspace
[profile.dev]
opt-level = 0
overflow-checks = true
debug-assertions = true
debug = true
codegen-units = 16
lto = false
incremental = true

# Use opt level 3 for dependencies not part of this workspace
[profile.dev.package."*"]
opt-level = 3

# Compile build-dependencies in release mode with
# the same settings as regular dependencies.
[profile.dev.build-override]
opt-level = 3

[profile.release.build-override]
opt-level = 3
codegen-units = 16
