[workspace]
resolver = "2"
members = [
    "crates/viewer",
]
default-members = ["crates/viewer"]

[patch.crates-io]
#bevy = { git = "https://github.com/Shfty/bevy", branch = "early-shader-defs-0.10.0" }
#bevy-rust-gpu = { git = "https://github.com/Bevy-Rust-GPU/bevy-rust-gpu", tag = "v0.4.0" }
#rust-gpu-builder-shared = { git = "https://github.com/Bevy-Rust-GPU/rust-gpu-builder-shared" }

naga = { git = "https://github.com/EmbarkStudios/naga", branch = "spv-in-break-if-v0.11.0" }
bevy = { path = "../../../bevy" }
bevy-rust-gpu = { path = "../../bevy-rust-gpu" }
rust-gpu-sdf = { path = "../../rust-gpu-sdf" }
rust-gpu-bridge = { path = "../../rust-gpu-bridge" }
rust-gpu-bridge-macros = { path = "../../rust-gpu-bridge-macros" }
rust-gpu-builder-shared = { path = "../../rust-gpu-builder-shared" }
type-fields = { path = "../../type-fields" }
type-fields-macros = { path = "../../type-fields-macros" }

# Fast-compile config
[profile.dev]
opt-level = 0
overflow-checks = true
debug-assertions = true
debug = true
codegen-units = 16
lto = false
incremental = true

# Use opt level 3 for dependencies
[profile.dev.package."*"]
opt-level = 3
