[workspace]
resolver = "2"
members = [
    "crates/shader",
    "crates/rust-gpu-builder",
]
default-members = ["crates/rust-gpu-builder"]

[patch.crates-io]
rustc_codegen_spirv = { git = "https://github.com/EmbarkStudios/rust-gpu" }
spirv-std = { git = "https://github.com/EmbarkStudios/rust-gpu" }
spirt = { git = "https://github.com/EmbarkStudios/spirt" }

#bevy-pbr-rust = { git = "https://github.com/Bevy-Rust-GPU/bevy-pbr-rust", tag = "v0.3.0" }
#rust-gpu-bridge = { git = "https://github.com/Bevy-Rust-GPU/bevy-pbr-rust" }
#rust-gpu-sdf = { git = "https://github.com/Bevy-Rust-GPU/rust-gpu-sdf", branch = "master", default_features = false, features = ["spirv-std"] }
#rust-gpu-builder-shared = { git = "https://github.com/Bevy-Rust-GPU/rust-gpu-builder-shared" }
#permutate-macro = { git = "https://github.com/Bevy-Rust-GPU/permutate-macro" }
#type-fields = { git = "https://github.com/Bevy-Rust-GPU/type-fields" }
#type-fields-macros = { git = "https://github.com/Bevy-Rust-GPU/type-fields-macros" }

bevy-pbr-rust = { path = "../../bevy-pbr-rust" }
rust-gpu-bridge = { path = "../../rust-gpu-bridge" }
rust-gpu-bridge-macros = { path = "../../rust-gpu-bridge-macros" }
rust-gpu-sdf = { path = "../../rust-gpu-sdf" }
rust-gpu-builder-shared = { path = "../../rust-gpu-builder-shared" }
permutate-macro = { path = "../../permutate-macro" }
type-fields = { path = "../../type-fields" }
type-fields-macros = { path = "../../type-fields-macros" }

