[package]
name = "bevy-pbr-rust"
version = "0.1.0"
edition = "2021"

[features]
default = [
    "no_storage_buffers_support",
    "vertex_positions",
    "vertex_normals",
    "vertex_uvs",
    "tonemap_in_shader",
    "deband_dither"
]

no_storage_buffers_support = []
no_array_textures_support = []
vertex_positions = []
vertex_normals = []
vertex_uvs = []
vertex_tangents = []
vertex_colors = []
sixteen_byte_alignment = []
skinned = []
tonemap_in_shader = []
deband_dither = []
clustered_forward_debug_z_slices = []
clustered_forward_debug_cluster_light_complexity = []
clustered_forward_debug_cluster_coherency = []


[dependencies]
spirv-std = "0.5.0"
shader-util = { path = "../shader-util" }
