[package]
name = "viewer"
version = "0.1.0"
edition = "2021"

[[example]]
name = "simple-material"
path = "examples/simple-material.rs"

[[example]]
name = "standard-material"
path = "examples/standard-material.rs"

[dependencies]
bevy = { version = "0.10.0", features = ["spirv_shader_passthrough"] }
#bevy = { version = "0.10.0" }
bevy-rust-gpu = { git = "https://github.com/bevy-rust-gpu/bevy-rust-gpu" }
rust-gpu-sdf = { git = "https://github.com/bevy-rust-gpu/rust-gpu-sdf", default_features = false, features = ["glam", "bevy"] }
rust-gpu-bridge = { git = "https://github.com/bevy-rust-gpu/rust-gpu-bridge", features = ["glam"] }
