[package]
name = "viewer"
version = "0.1.0"
edition = "2021"

[[example]]
name = "simple-material"
path = "examples/simple-material.rs"

[[example]]
name = "standard-material"
path = "examples/standard-material.rs"

[dependencies]
bevy = { version = "0.10.0", features = ["spirv_shader_passthrough"] }
rmp-serde="1.1.1"

bevy-rust-gpu = { git = "https://github.com/bevy-rust-gpu/bevy-rust-gpu", tag = "v0.5.0" }
rust-gpu-bridge = { git = "https://github.com/bevy-rust-gpu/rust-gpu-bridge", features = ["glam"], tag = "v0.5.0" }
rust-gpu-sdf = { git = "https://github.com/bevy-rust-gpu/rust-gpu-sdf", default_features = false, features = ["glam", "bevy"] }
