[package]
name = "viewer"
version = "0.1.0"
edition = "2021"

[[example]]
name = "simple-material"
path = "examples/simple-material.rs"

[[example]]
name = "standard-material"
path = "examples/standard-material.rs"

[dependencies]
bevy = { version = "0.11.3" }
rmp-serde="1.1.1"
bevy-rust-gpu = { path = "../bevy_rust_gpu" }
rust-gpu-bridge = { git = "https://github.com/bevy-rust-gpu/rust-gpu-bridge", features = ["glam"], tag = "v0.5.0" }
rust-gpu-sdf = { path = "../rust-gpu-sdf", default_features = false, features = ["glam", "bevy"] }
