[package]
name = "rust-gpu-builder"
version = "0.1.0"
edition = "2021"
build = false

[dependencies]
spirv-builder = "0.5.0"
ctrlc = "3.2.5"
notify = "5.1.0"
futures = { version = "0.3.26", features = ["thread-pool"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
clap = { version = "4.1.6", features = ["derive"] }
