[package]
name = "rust-gpu-builder"
version = "0.5.0"
edition = "2021"

[dependencies]
rust-gpu-builder-shared = { path = "../../../bevy-app/crates/bevy_rust_gpu/lib/rust-gpu-builder-shared" }

spirv-builder = "0.9.0"
notify = "5.1.0"
serde_json = "1.0.94"
rmp-serde = "1.1.1"

futures-lite = "1.12.0"
async-executor = "1.5.0"
async-channel = "1.8.0"
async-fs = "1.6.0"
easy-parallel = "3.2.0"

tracing = "0.1.37"
tracing-subscriber = "0.3.16"
clap = { version = "4.1.6", features = ["derive"] }