[package]
name = "shader"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["dylib"]

[dependencies]
spirv-std = "0.7.0"

bevy-pbr-rust = { git = "https://github.com/bevy-rust-gpu/bevy-pbr-rust" }
rust-gpu-sdf = { git = "https://github.com/bevy-rust-gpu/rust-gpu-sdf", features = ["spirv-std"] }
rust-gpu-bridge = { git = "https://github.com/bevy-rust-gpu/rust-gpu-bridge", features = ["spirv-std"] }
permutate-macro = { git = "https://github.com/bevy-rust-gpu/permutate-macro" }
